<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.morningtea.ui.home.HomeFragment"
        android:label="@string/newspaper"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.morningtea.ui.gallery.GalleryFragment"
        android:label="@string/bollytolly"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.morningtea.ui.slideshow.SlideshowFragment"
        android:label="@string/hollywood"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.morningtea.ui.tools.ToolsFragment"
        android:label="@string/cricket"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.morningtea.ui.share.ShareFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_share" />


</navigation>